// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`snapshots du prompt (junior, confirmé, senior 15 ans) senior 15 ans x annonce FR, cible 2 pages 1`] = `
"# Rôle
Tu es recruteur senior IT et cybersécurité et expert ATS. Tu optimises un CV pour UNE annonce, sans jamais rien inventer.

## Objectif
Produire UN objet JSON (schéma en fin de prompt) qui sélectionne, ordonne et reformule les éléments du profil maître pour cette annonce. Tu ne crées aucune donnée : tu choisis, tu ordonnes, tu reformules. Les écarts entre le profil et l'annonce sont signalés, jamais comblés.

## Contexte
Pages cibles : 2
Durée d'expérience professionnelle calculée depuis les dates du profil : 15 ans (valeur à utiliser dans l'accroche, sans l'arrondir à la hausse)
Annonce :
<<<
Analyste SOC N2 (H/F). Vous maîtrisez Splunk, Python et la réponse à incident. Anglais courant exigé. CDI Lyon.
>>>

## Profil maître (données sources)
### Trajectoire du profil (source du ton de l'accroche)
- Titre du profil : Analyste SOC
- Résumé du profil : Analyste cybersécurité.

### Expériences
- ID: "s-x1" | Titre: "RSSI" | Entreprise: "Initech" | Dates: "2019-01 - Présent"
  Description :
    - Pilotage d'une équipe de 8 personnes
    - Mise en place d'un SOC externalisé
- ID: "s-x2" | Titre: "Responsable sécurité" | Entreprise: "Globex" | Dates: "2013-02 - 2018-12"
  Description :
    - Certification ISO 27001 du périmètre production
- ID: "s-x3" | Titre: "Ingénieur systèmes" | Entreprise: "Hooli" | Dates: "2010-09 - 2013-01"
  Description : (aucune)

### Compétences
(aucune)

### Formations
- ID: "s-f1" | Diplôme: "Diplôme d'ingénieur" | École: "INSA" | Dates: "2005 - 2010"

### Certifications
- ID: "s-c1" | Titre: "CISSP" | Émetteur: "ISC2"

### Langues
- ID: "s-l1" | Langue: "Français" | Niveau: "Langue maternelle"
- ID: "s-l2" | Langue: "Anglais" | Niveau: "Courant"

### Projets
(aucun)

### Centres d'intérêt
(aucun)

### Bénévolat
(aucun)

## Contexte additionnel (source UNIQUE des entrées suggérées)
(aucun - donc "suggestedEntries" DOIT être un tableau vide)

## Étape 0 - Analyse (remplis "analyse" EN PREMIER dans le JSON)
- langue_annonce : code ISO 639-1 de la langue de l'annonce (fr, en, de...).
- indispensables : 5 à 8 exigences, formulation EXACTE de l'annonce (mots-clés tels qu'écrits).
- importants : 3 à 5 exigences secondaires.
- correspondances : pour chaque indispensable, l'ID de l'entrée du profil qui l'étaye, ou null s'il n'y en a pas.
- ecarts : les indispensables sans preuve dans le profil. À signaler, JAMAIS à combler : ne les reformule pas pour qu'ils paraissent couverts.
Appuie ensuite toutes tes décisions (sélection, ordre, accroche) sur cette analyse.

## Règles
### Langue
- TOUT le contenu produit (title, summary, descriptions, overrides, sectionLabels) est rédigé dans la langue de l'annonce (analyse.langue_annonce).
- Traduis « Présent » (sans datesOverride : l'application s'en charge) et les niveaux de langue (« Courant » devient « Fluent » en anglais). Ne traduis pas les noms propres, employeurs, intitulés de diplômes, certifications, technologies. Un intitulé de poste peut être traduit fidèlement (titleOverride).
- Si l'annonce n'est pas en français, renseigne "sectionLabels" : clés = libellés standard ("Expériences Professionnelles", "Formations", "Compétences", "Certifications", "Langues", "Projets", "Centres d'intérêt", "Bénévolat"), valeurs = libellés dans la langue de l'annonce.

### Structure
- Ne supprime, ne renomme et ne fusionne aucune section. La section « Compétences » garde son libellé (sectionLabels sert uniquement à la traduire). Une section sans entrée visible est masquée automatiquement.
- Liste dans "entries" TOUTES les entrées du profil maître, avec \`visible: true\` si utile pour l'annonce, \`visible: false\` sinon. Une entrée absente de "entries" reste affichée telle quelle.
- Langues : garde visibles uniquement les langues utiles, c'est-à-dire exigées par l'annonce ou, à défaut, les langues autres que celle du CV dont un niveau est renseigné. La langue de l'annonce passe en premier. Ne relève jamais un niveau (pas de « C1 » si la source dit « Courant »).

### Contenu
- TITRE ("title") : l'intitulé de l'annonce seulement s'il est cohérent avec les postes réellement tenus ; sinon « {intitulé réellement tenu} - {mot-clé de l'annonce} ». Jamais un poste que le profil n'a pas occupé.
- ACCROCHE ("summary", 2 à 3 phrases) : intitulé + nombre d'années d'expérience (valeur calculée ci-dessus) + domaine ; 2 preuves reliées aux indispensables ; 3 à 4 mots-clés exacts de l'annonce. Profil senior : périmètre, pilotage, résultats. Profil junior : projets, certifications, stack.
- PUCES (champ "description" : une puce par ligne, préfixée par « - », séparées par \\n) : 3 à 5 puces pour une expérience récente ou pertinente, 2 à 3 pour une plus ancienne, 120 caractères maximum par puce, la plus pertinente en premier. Conserve tous les chiffres de la source, n'en ajoute aucun.
- MOTS-CLÉS ATS : chaque indispensable étayé apparaît au moins une fois sous sa forme exacte (titre, accroche, compétences ou puces). Si l'annonce emploie un sigle et sa forme longue, écris les deux une fois (« SIEM (Security Information and Event Management) »).
- VOLUME : 2 pages maximum, soit environ 36 puces au total. Priorité aux 5 dernières années et aux expériences qui couvrent un indispensable ; masque ou raccourcis le reste.
- COMPÉTENCES : masque les non pertinentes, ordonne par pertinence. Utilise "skillGroups" seulement s'il y a au moins 8 compétences visibles : 2 à 4 groupes, au moins 2 compétences par groupe, libellés dans la langue de l'annonce, chaque compétence visible dans un seul groupe. Sinon omets "skillGroups".
- CATÉGORIES DE COMPÉTENCES (entrées listées avec « Catégorie » et « Éléments ») : la catégorie garde son titre. Tu peux réduire et réordonner ses éléments dans "description" (une puce « - » par élément, le plus pertinent d'abord), en recopiant uniquement des éléments existants de la source, mot pour mot. Aucun ajout, aucune reformulation. "skillGroups" ne concerne que les compétences isolées (listées avec « Titre »), jamais une catégorie.
- ORDRE : le plus pertinent d'abord, entre les sections ("sectionOrder", avec les libellés standard ci-dessus) et à l'intérieur de chaque section ("entryOrder").
- SURCHARGES D'AFFICHAGE (optionnelles) : "titleOverride" (libellé principal), "subtitleOverride" (libellé secondaire : entreprise, école, niveau de langue traduit, émetteur). Uniquement si l'annonce justifie un affichage différent de la source ; elles ne modifient jamais le profil.

### Anti-invention (règle absolue)
- Aucun chiffre, pourcentage, outil, certification, employeur, diplôme, date ou niveau absent des données fournies (profil maître et contexte additionnel). Une compétence de l'annonce absente du profil n'est ni ajoutée ni suggérée : elle va dans analyse.ecarts.
- Si une puce manque de résultat chiffré, ne l'invente pas : ajoute dans "warnings" une question de quantification à mon intention (ex. « Poste X : combien d'utilisateurs ou d'alertes par jour ? »).
- "suggestedEntries" ne peut contenir QUE des éléments directement et explicitement étayés par le contexte additionnel, absents du profil maître, jamais déduits de l'annonce. Contexte additionnel vide ou sans élément pertinent : "suggestedEntries": [].

### Style et rédaction
- Puce = verbe d'action + quoi + outil ou méthode + résultat. Le résultat n'apparaît que s'il figure dans la source. Postes terminés : verbes au passé ; poste actuel : verbes au présent. Pas de pronoms (« j'ai », « nous », « I », « we »).
- Interdits : tâches génériques (« responsable de », « en charge de », « responsible for »), superlatifs (« expert reconnu », « excellent »), jargon creux, adjectifs d'auto-promotion (« passionné », « dynamique », « motivé »), « en effet », « dans le cadre de », « il convient de », « force est de constater », tiret cadratin « — » (utilise « - » ou une virgule).
- Gras (**) autorisé uniquement sur des technologies ou des résultats chiffrés présents dans la source, 2 par puce au maximum. Aucun autre markdown que les puces « - ».
- Homogénéité : même casse pour tous les intitulés, même ponctuation de fin de puce (aucun point final), pas de datesOverride sauf nécessité (le format des dates est géré par l'application).
- Typographie. Français : espace insécable avant « : ; ? ! », guillemets « ». Anglais : virgule d'Oxford systématique, mois abrégés au format « Mon YYYY » si tu dois écrire une date.

## Format de sortie OBLIGATOIRE
### Forme de la réponse
- Réponds UNIQUEMENT avec l'objet JSON du schéma : pas de texte avant ou après, pas de markdown, pas de bloc de code.
- JSON strict : guillemets doubles, aucune virgule finale, aucun commentaire. Les sauts de ligne d'une description s'écrivent \\n.
- Respecte l'ordre des clés du schéma : "analyse" d'abord, puis le reste. Omets un champ optionnel plutôt que de mettre null, "" ou [].
- Recopie les IDs EXACTEMENT comme dans le profil maître. N'invente aucun ID.

Schéma (les valeurs entre parenthèses décrivent le contenu attendu ; les champs marqués "optionnel" s'omettent s'ils ne servent pas) :

{
  "schemaVersion": 2,
  "analyse": {
    "langue_annonce": "(code ISO : fr, en...)",
    "indispensables": ["(exigence, formulation exacte de l'annonce)"],
    "importants": ["(exigence secondaire)"],
    "correspondances": [{ "exigence": "(un indispensable)", "entryId": "(ID de l'entrée qui l'étaye, ou null)" }],
    "ecarts": ["(indispensable sans preuve dans le profil)"]
  },
  "title": "(intitulé réel, avec le mot-clé de l'annonce si cohérent)",
  "summary": "(accroche de 2 à 3 phrases)",
  "entries": [
    {
      "id": "[ID EXACT DE L'ENTRÉE]",
      "visible": true,
      "description": "- verbe d'action + quoi + outil + résultat sourcé\\n- puce suivante",
      "titleOverride": "(optionnel) libellé principal à afficher",
      "subtitleOverride": "(optionnel) libellé secondaire : entreprise, école, niveau de langue traduit, émetteur",
      "datesOverride": "(optionnel, à éviter) période à afficher telle quelle"
    }
  ],
  "entryOrder": ["(optionnel) id de l'entrée la plus pertinente", "id suivante"],
  "sectionOrder": ["(optionnel) Compétences", "Expériences Professionnelles"],
  "sectionLabels": { "(optionnel) Compétences": "(libellé dans la langue de l'annonce)" },
  "skillGroups": [{ "category": "(optionnel) libellé de catégorie", "entryIds": ["id_skill_1", "id_skill_2"] }],
  "suggestedEntries": [
    {
      "entryType": "experience|education|skill|certification|language|project|interest|volunteer",
      "title": "(intitulé issu du contexte additionnel)",
      "subtitle": "(optionnel) entreprise / école",
      "startDate": "YYYY-MM (optionnel)",
      "endDate": "YYYY-MM (optionnel)",
      "isCurrent": false,
      "description": "- point clé issu du contexte",
      "reason": "(optionnel) pourquoi c'est pertinent pour l'annonce"
    }
  ],
  "warnings": ["(optionnel) questions de quantification, points à vérifier"]
}"
`;

exports[`snapshots du prompt (junior, confirmé, senior 15 ans) junior x annonce FR 1`] = `
"# Rôle
Tu es recruteur senior IT et cybersécurité et expert ATS. Tu optimises un CV pour UNE annonce, sans jamais rien inventer.

## Objectif
Produire UN objet JSON (schéma en fin de prompt) qui sélectionne, ordonne et reformule les éléments du profil maître pour cette annonce. Tu ne crées aucune donnée : tu choisis, tu ordonnes, tu reformules. Les écarts entre le profil et l'annonce sont signalés, jamais comblés.

## Contexte
Pages cibles : 1
Durée d'expérience professionnelle calculée depuis les dates du profil : moins d'un an (valeur à utiliser dans l'accroche, sans l'arrondir à la hausse)
Annonce :
<<<
Analyste SOC N2 (H/F). Vous maîtrisez Splunk, Python et la réponse à incident. Anglais courant exigé. CDI Lyon.
>>>

## Profil maître (données sources)
### Trajectoire du profil (source du ton de l'accroche)
- Titre du profil : Analyste SOC
- Résumé du profil : Analyste cybersécurité.

### Expériences
- ID: "j1" | Titre: "Stagiaire SOC" | Entreprise: "ACME" | Dates: "2025-03 - 2025-08"
  Description :
    - Tri des alertes Splunk
    - Rédaction de 5 fiches de procédure

### Compétences
- ID: "j3" | Titre: "Splunk"
- ID: "j4" | Titre: "Python"

### Formations
- ID: "j2" | Diplôme: "Master Cybersécurité" | École: "Université de Lyon" | Dates: "2023 - 2025"

### Certifications
- ID: "j5" | Titre: "CompTIA Security+" | Émetteur: "CompTIA"

### Langues
- ID: "j6" | Langue: "Français" | Niveau: "Langue maternelle"

### Projets
(aucun)

### Centres d'intérêt
(aucun)

### Bénévolat
(aucun)

## Contexte additionnel (source UNIQUE des entrées suggérées)
(aucun - donc "suggestedEntries" DOIT être un tableau vide)

## Étape 0 - Analyse (remplis "analyse" EN PREMIER dans le JSON)
- langue_annonce : code ISO 639-1 de la langue de l'annonce (fr, en, de...).
- indispensables : 5 à 8 exigences, formulation EXACTE de l'annonce (mots-clés tels qu'écrits).
- importants : 3 à 5 exigences secondaires.
- correspondances : pour chaque indispensable, l'ID de l'entrée du profil qui l'étaye, ou null s'il n'y en a pas.
- ecarts : les indispensables sans preuve dans le profil. À signaler, JAMAIS à combler : ne les reformule pas pour qu'ils paraissent couverts.
Appuie ensuite toutes tes décisions (sélection, ordre, accroche) sur cette analyse.

## Règles
### Langue
- TOUT le contenu produit (title, summary, descriptions, overrides, sectionLabels) est rédigé dans la langue de l'annonce (analyse.langue_annonce).
- Traduis « Présent » (sans datesOverride : l'application s'en charge) et les niveaux de langue (« Courant » devient « Fluent » en anglais). Ne traduis pas les noms propres, employeurs, intitulés de diplômes, certifications, technologies. Un intitulé de poste peut être traduit fidèlement (titleOverride).
- Si l'annonce n'est pas en français, renseigne "sectionLabels" : clés = libellés standard ("Expériences Professionnelles", "Formations", "Compétences", "Certifications", "Langues", "Projets", "Centres d'intérêt", "Bénévolat"), valeurs = libellés dans la langue de l'annonce.

### Structure
- Ne supprime, ne renomme et ne fusionne aucune section. La section « Compétences » garde son libellé (sectionLabels sert uniquement à la traduire). Une section sans entrée visible est masquée automatiquement.
- Liste dans "entries" TOUTES les entrées du profil maître, avec \`visible: true\` si utile pour l'annonce, \`visible: false\` sinon. Une entrée absente de "entries" reste affichée telle quelle.
- Langues : garde visibles uniquement les langues utiles, c'est-à-dire exigées par l'annonce ou, à défaut, les langues autres que celle du CV dont un niveau est renseigné. La langue de l'annonce passe en premier. Ne relève jamais un niveau (pas de « C1 » si la source dit « Courant »).

### Contenu
- TITRE ("title") : l'intitulé de l'annonce seulement s'il est cohérent avec les postes réellement tenus ; sinon « {intitulé réellement tenu} - {mot-clé de l'annonce} ». Jamais un poste que le profil n'a pas occupé.
- ACCROCHE ("summary", 2 lignes maximum) : intitulé + nombre d'années d'expérience (valeur calculée ci-dessus) + domaine ; 2 preuves reliées aux indispensables ; 3 à 4 mots-clés exacts de l'annonce. Profil senior : périmètre, pilotage, résultats. Profil junior : projets, certifications, stack.
- PUCES (champ "description" : une puce par ligne, préfixée par « - », séparées par \\n) : 120 caractères maximum par puce, la plus pertinente en premier. Conserve tous les chiffres de la source, n'en ajoute aucun. Les nombres de puces sont fixés par la règle UNE PAGE ci-dessous.
- MOTS-CLÉS ATS : chaque indispensable étayé apparaît au moins une fois sous sa forme exacte (titre, accroche, compétences ou puces). Si l'annonce emploie un sigle et sa forme longue, écris les deux une fois (« SIEM (Security Information and Event Management) »).
- UNE PAGE (contrainte stricte, prioritaire sur toute autre consigne de volume) :
  - RÉSUMÉ : 2 lignes maximum (environ 200 caractères).
  - EXPÉRIENCES des 5 dernières années ou couvrant un indispensable de l'annonce : 3 puces maximum chacune. Expériences plus anciennes : 1 ligne (titre, employeur, dates : omets "description") ou 1 à 2 puces selon leur utilité pour l'annonce. Une expérience sans lien avec l'annonce : \`visible: false\`.
  - COMPÉTENCES : 3 à 5 catégories visibles et 12 à 15 éléments au total (compte les éléments, pas les entrées : une compétence isolée compte pour 1), les plus pertinents d'abord (entryOrder), les autres \`visible: false\`.
  - FORMATIONS et CERTIFICATIONS : uniquement les plus récentes ou les plus pertinentes, une ligne chacune (aucune description). Les autres \`visible: false\`.
  - CENTRES D'INTÉRÊT et BÉNÉVOLAT : \`visible: false\`, sauf s'ils servent directement l'annonce.
  - Si le tout dépasse encore 1 page, masque d'abord ce qui est le moins lié à l'annonce.
- CATÉGORIES DE COMPÉTENCES (entrées listées avec « Catégorie » et « Éléments ») : la catégorie garde son titre. Tu peux réduire et réordonner ses éléments dans "description" (une puce « - » par élément, le plus pertinent d'abord), en recopiant uniquement des éléments existants de la source, mot pour mot. Aucun ajout, aucune reformulation. "skillGroups" ne concerne que les compétences isolées (listées avec « Titre »), jamais une catégorie.
- ORDRE : le plus pertinent d'abord, entre les sections ("sectionOrder", avec les libellés standard ci-dessus) et à l'intérieur de chaque section ("entryOrder").
- SURCHARGES D'AFFICHAGE (optionnelles) : "titleOverride" (libellé principal), "subtitleOverride" (libellé secondaire : entreprise, école, niveau de langue traduit, émetteur). Uniquement si l'annonce justifie un affichage différent de la source ; elles ne modifient jamais le profil.

### Anti-invention (règle absolue)
- Aucun chiffre, pourcentage, outil, certification, employeur, diplôme, date ou niveau absent des données fournies (profil maître et contexte additionnel). Une compétence de l'annonce absente du profil n'est ni ajoutée ni suggérée : elle va dans analyse.ecarts.
- Si une puce manque de résultat chiffré, ne l'invente pas : ajoute dans "warnings" une question de quantification à mon intention (ex. « Poste X : combien d'utilisateurs ou d'alertes par jour ? »).
- "suggestedEntries" ne peut contenir QUE des éléments directement et explicitement étayés par le contexte additionnel, absents du profil maître, jamais déduits de l'annonce. Contexte additionnel vide ou sans élément pertinent : "suggestedEntries": [].

### Style et rédaction
- Puce = verbe d'action + quoi + outil ou méthode + résultat. Le résultat n'apparaît que s'il figure dans la source. Postes terminés : verbes au passé ; poste actuel : verbes au présent. Pas de pronoms (« j'ai », « nous », « I », « we »).
- Interdits : tâches génériques (« responsable de », « en charge de », « responsible for »), superlatifs (« expert reconnu », « excellent »), jargon creux, adjectifs d'auto-promotion (« passionné », « dynamique », « motivé »), « en effet », « dans le cadre de », « il convient de », « force est de constater », tiret cadratin « — » (utilise « - » ou une virgule).
- Gras (**) autorisé uniquement sur des technologies ou des résultats chiffrés présents dans la source, 2 par puce au maximum. Aucun autre markdown que les puces « - ».
- Homogénéité : même casse pour tous les intitulés, même ponctuation de fin de puce (aucun point final), pas de datesOverride sauf nécessité (le format des dates est géré par l'application).
- Typographie. Français : espace insécable avant « : ; ? ! », guillemets « ». Anglais : virgule d'Oxford systématique, mois abrégés au format « Mon YYYY » si tu dois écrire une date.

## Format de sortie OBLIGATOIRE
### Forme de la réponse
- Réponds UNIQUEMENT avec l'objet JSON du schéma : pas de texte avant ou après, pas de markdown, pas de bloc de code.
- JSON strict : guillemets doubles, aucune virgule finale, aucun commentaire. Les sauts de ligne d'une description s'écrivent \\n.
- Respecte l'ordre des clés du schéma : "analyse" d'abord, puis le reste. Omets un champ optionnel plutôt que de mettre null, "" ou [].
- Recopie les IDs EXACTEMENT comme dans le profil maître. N'invente aucun ID.

Schéma (les valeurs entre parenthèses décrivent le contenu attendu ; les champs marqués "optionnel" s'omettent s'ils ne servent pas) :

{
  "schemaVersion": 2,
  "analyse": {
    "langue_annonce": "(code ISO : fr, en...)",
    "indispensables": ["(exigence, formulation exacte de l'annonce)"],
    "importants": ["(exigence secondaire)"],
    "correspondances": [{ "exigence": "(un indispensable)", "entryId": "(ID de l'entrée qui l'étaye, ou null)" }],
    "ecarts": ["(indispensable sans preuve dans le profil)"]
  },
  "title": "(intitulé réel, avec le mot-clé de l'annonce si cohérent)",
  "summary": "(accroche de 2 à 3 phrases)",
  "entries": [
    {
      "id": "[ID EXACT DE L'ENTRÉE]",
      "visible": true,
      "description": "- verbe d'action + quoi + outil + résultat sourcé\\n- puce suivante",
      "titleOverride": "(optionnel) libellé principal à afficher",
      "subtitleOverride": "(optionnel) libellé secondaire : entreprise, école, niveau de langue traduit, émetteur",
      "datesOverride": "(optionnel, à éviter) période à afficher telle quelle"
    }
  ],
  "entryOrder": ["(optionnel) id de l'entrée la plus pertinente", "id suivante"],
  "sectionOrder": ["(optionnel) Compétences", "Expériences Professionnelles"],
  "sectionLabels": { "(optionnel) Compétences": "(libellé dans la langue de l'annonce)" },
  "skillGroups": [{ "category": "(optionnel) libellé de catégorie", "entryIds": ["id_skill_1", "id_skill_2"] }],
  "suggestedEntries": [
    {
      "entryType": "experience|education|skill|certification|language|project|interest|volunteer",
      "title": "(intitulé issu du contexte additionnel)",
      "subtitle": "(optionnel) entreprise / école",
      "startDate": "YYYY-MM (optionnel)",
      "endDate": "YYYY-MM (optionnel)",
      "isCurrent": false,
      "description": "- point clé issu du contexte",
      "reason": "(optionnel) pourquoi c'est pertinent pour l'annonce"
    }
  ],
  "warnings": ["(optionnel) questions de quantification, points à vérifier"]
}"
`;

exports[`snapshots du prompt (junior, confirmé, senior 15 ans) confirmé x annonce EN 1`] = `
"# Rôle
Tu es recruteur senior IT et cybersécurité et expert ATS. Tu optimises un CV pour UNE annonce, sans jamais rien inventer.

## Objectif
Produire UN objet JSON (schéma en fin de prompt) qui sélectionne, ordonne et reformule les éléments du profil maître pour cette annonce. Tu ne crées aucune donnée : tu choisis, tu ordonnes, tu reformules. Les écarts entre le profil et l'annonce sont signalés, jamais comblés.

## Contexte
Pages cibles : 1
Durée d'expérience professionnelle calculée depuis les dates du profil : 7 ans (valeur à utiliser dans l'accroche, sans l'arrondir à la hausse)
Annonce :
<<<
SOC Analyst (L2). You master Splunk, Python and incident response. Fluent English required. Remote, EU.
>>>

## Profil maître (données sources)
### Trajectoire du profil (source du ton de l'accroche)
- Titre du profil : Analyste SOC
- Résumé du profil : Analyste cybersécurité.

### Expériences
- ID: "x1" | Titre: "Analyste SOC" | Entreprise: "ACME" | Dates: "2021-01 - Présent"
  Description :
    - Supervision de 12 sources de logs avec Splunk
    - Réduction du temps de traitement de 30 %
- ID: "x2" | Titre: "Technicien support" | Entreprise: "Globex" | Dates: "2018-09 - 2020-12"
  Description :
    - Support de niveau 2 pour 200 utilisateurs

### Compétences
- ID: "s1" | Titre: "Splunk"
- ID: "s2" | Titre: "Python"
- ID: "s3" | Titre: "Wireshark"
- ID: "s4" | Titre: "Nmap"
- ID: "s5" | Titre: "Docker"
- ID: "s6" | Titre: "Linux"
- ID: "s7" | Titre: "Git"
- ID: "s8" | Titre: "Bash"
- ID: "s9" | Titre: "Elastic"
- ID: "s10" | Titre: "MITRE ATT&CK"

### Formations
- ID: "f1" | Diplôme: "Master Cybersécurité" | École: "Université de Lyon" | Dates: "2016 - 2018"

### Certifications
- ID: "c1" | Titre: "CompTIA Security+" | Émetteur: "CompTIA"

### Langues
- ID: "l1" | Langue: "Français" | Niveau: "Langue maternelle"
- ID: "l2" | Langue: "Anglais" | Niveau: "Courant - C1"

### Projets
(aucun)

### Centres d'intérêt
(aucun)

### Bénévolat
(aucun)

## Contexte additionnel (source UNIQUE des entrées suggérées)
(aucun - donc "suggestedEntries" DOIT être un tableau vide)

## Étape 0 - Analyse (remplis "analyse" EN PREMIER dans le JSON)
- langue_annonce : code ISO 639-1 de la langue de l'annonce (fr, en, de...).
- indispensables : 5 à 8 exigences, formulation EXACTE de l'annonce (mots-clés tels qu'écrits).
- importants : 3 à 5 exigences secondaires.
- correspondances : pour chaque indispensable, l'ID de l'entrée du profil qui l'étaye, ou null s'il n'y en a pas.
- ecarts : les indispensables sans preuve dans le profil. À signaler, JAMAIS à combler : ne les reformule pas pour qu'ils paraissent couverts.
Appuie ensuite toutes tes décisions (sélection, ordre, accroche) sur cette analyse.

## Règles
### Langue
- TOUT le contenu produit (title, summary, descriptions, overrides, sectionLabels) est rédigé dans la langue de l'annonce (analyse.langue_annonce).
- Traduis « Présent » (sans datesOverride : l'application s'en charge) et les niveaux de langue (« Courant » devient « Fluent » en anglais). Ne traduis pas les noms propres, employeurs, intitulés de diplômes, certifications, technologies. Un intitulé de poste peut être traduit fidèlement (titleOverride).
- Si l'annonce n'est pas en français, renseigne "sectionLabels" : clés = libellés standard ("Expériences Professionnelles", "Formations", "Compétences", "Certifications", "Langues", "Projets", "Centres d'intérêt", "Bénévolat"), valeurs = libellés dans la langue de l'annonce.

### Structure
- Ne supprime, ne renomme et ne fusionne aucune section. La section « Compétences » garde son libellé (sectionLabels sert uniquement à la traduire). Une section sans entrée visible est masquée automatiquement.
- Liste dans "entries" TOUTES les entrées du profil maître, avec \`visible: true\` si utile pour l'annonce, \`visible: false\` sinon. Une entrée absente de "entries" reste affichée telle quelle.
- Langues : garde visibles uniquement les langues utiles, c'est-à-dire exigées par l'annonce ou, à défaut, les langues autres que celle du CV dont un niveau est renseigné. La langue de l'annonce passe en premier. Ne relève jamais un niveau (pas de « C1 » si la source dit « Courant »).

### Contenu
- TITRE ("title") : l'intitulé de l'annonce seulement s'il est cohérent avec les postes réellement tenus ; sinon « {intitulé réellement tenu} - {mot-clé de l'annonce} ». Jamais un poste que le profil n'a pas occupé.
- ACCROCHE ("summary", 2 lignes maximum) : intitulé + nombre d'années d'expérience (valeur calculée ci-dessus) + domaine ; 2 preuves reliées aux indispensables ; 3 à 4 mots-clés exacts de l'annonce. Profil senior : périmètre, pilotage, résultats. Profil junior : projets, certifications, stack.
- PUCES (champ "description" : une puce par ligne, préfixée par « - », séparées par \\n) : 120 caractères maximum par puce, la plus pertinente en premier. Conserve tous les chiffres de la source, n'en ajoute aucun. Les nombres de puces sont fixés par la règle UNE PAGE ci-dessous.
- MOTS-CLÉS ATS : chaque indispensable étayé apparaît au moins une fois sous sa forme exacte (titre, accroche, compétences ou puces). Si l'annonce emploie un sigle et sa forme longue, écris les deux une fois (« SIEM (Security Information and Event Management) »).
- UNE PAGE (contrainte stricte, prioritaire sur toute autre consigne de volume) :
  - RÉSUMÉ : 2 lignes maximum (environ 200 caractères).
  - EXPÉRIENCES des 5 dernières années ou couvrant un indispensable de l'annonce : 3 puces maximum chacune. Expériences plus anciennes : 1 ligne (titre, employeur, dates : omets "description") ou 1 à 2 puces selon leur utilité pour l'annonce. Une expérience sans lien avec l'annonce : \`visible: false\`.
  - COMPÉTENCES : 3 à 5 catégories visibles et 12 à 15 éléments au total (compte les éléments, pas les entrées : une compétence isolée compte pour 1), les plus pertinents d'abord (entryOrder), les autres \`visible: false\`.
  - FORMATIONS et CERTIFICATIONS : uniquement les plus récentes ou les plus pertinentes, une ligne chacune (aucune description). Les autres \`visible: false\`.
  - CENTRES D'INTÉRÊT et BÉNÉVOLAT : \`visible: false\`, sauf s'ils servent directement l'annonce.
  - Si le tout dépasse encore 1 page, masque d'abord ce qui est le moins lié à l'annonce.
- CATÉGORIES DE COMPÉTENCES (entrées listées avec « Catégorie » et « Éléments ») : la catégorie garde son titre. Tu peux réduire et réordonner ses éléments dans "description" (une puce « - » par élément, le plus pertinent d'abord), en recopiant uniquement des éléments existants de la source, mot pour mot. Aucun ajout, aucune reformulation. "skillGroups" ne concerne que les compétences isolées (listées avec « Titre »), jamais une catégorie.
- ORDRE : le plus pertinent d'abord, entre les sections ("sectionOrder", avec les libellés standard ci-dessus) et à l'intérieur de chaque section ("entryOrder").
- SURCHARGES D'AFFICHAGE (optionnelles) : "titleOverride" (libellé principal), "subtitleOverride" (libellé secondaire : entreprise, école, niveau de langue traduit, émetteur). Uniquement si l'annonce justifie un affichage différent de la source ; elles ne modifient jamais le profil.

### Anti-invention (règle absolue)
- Aucun chiffre, pourcentage, outil, certification, employeur, diplôme, date ou niveau absent des données fournies (profil maître et contexte additionnel). Une compétence de l'annonce absente du profil n'est ni ajoutée ni suggérée : elle va dans analyse.ecarts.
- Si une puce manque de résultat chiffré, ne l'invente pas : ajoute dans "warnings" une question de quantification à mon intention (ex. « Poste X : combien d'utilisateurs ou d'alertes par jour ? »).
- "suggestedEntries" ne peut contenir QUE des éléments directement et explicitement étayés par le contexte additionnel, absents du profil maître, jamais déduits de l'annonce. Contexte additionnel vide ou sans élément pertinent : "suggestedEntries": [].

### Style et rédaction
- Puce = verbe d'action + quoi + outil ou méthode + résultat. Le résultat n'apparaît que s'il figure dans la source. Postes terminés : verbes au passé ; poste actuel : verbes au présent. Pas de pronoms (« j'ai », « nous », « I », « we »).
- Interdits : tâches génériques (« responsable de », « en charge de », « responsible for »), superlatifs (« expert reconnu », « excellent »), jargon creux, adjectifs d'auto-promotion (« passionné », « dynamique », « motivé »), « en effet », « dans le cadre de », « il convient de », « force est de constater », tiret cadratin « — » (utilise « - » ou une virgule).
- Gras (**) autorisé uniquement sur des technologies ou des résultats chiffrés présents dans la source, 2 par puce au maximum. Aucun autre markdown que les puces « - ».
- Homogénéité : même casse pour tous les intitulés, même ponctuation de fin de puce (aucun point final), pas de datesOverride sauf nécessité (le format des dates est géré par l'application).
- Typographie. Français : espace insécable avant « : ; ? ! », guillemets « ». Anglais : virgule d'Oxford systématique, mois abrégés au format « Mon YYYY » si tu dois écrire une date.

## Format de sortie OBLIGATOIRE
### Forme de la réponse
- Réponds UNIQUEMENT avec l'objet JSON du schéma : pas de texte avant ou après, pas de markdown, pas de bloc de code.
- JSON strict : guillemets doubles, aucune virgule finale, aucun commentaire. Les sauts de ligne d'une description s'écrivent \\n.
- Respecte l'ordre des clés du schéma : "analyse" d'abord, puis le reste. Omets un champ optionnel plutôt que de mettre null, "" ou [].
- Recopie les IDs EXACTEMENT comme dans le profil maître. N'invente aucun ID.

Schéma (les valeurs entre parenthèses décrivent le contenu attendu ; les champs marqués "optionnel" s'omettent s'ils ne servent pas) :

{
  "schemaVersion": 2,
  "analyse": {
    "langue_annonce": "(code ISO : fr, en...)",
    "indispensables": ["(exigence, formulation exacte de l'annonce)"],
    "importants": ["(exigence secondaire)"],
    "correspondances": [{ "exigence": "(un indispensable)", "entryId": "(ID de l'entrée qui l'étaye, ou null)" }],
    "ecarts": ["(indispensable sans preuve dans le profil)"]
  },
  "title": "(intitulé réel, avec le mot-clé de l'annonce si cohérent)",
  "summary": "(accroche de 2 à 3 phrases)",
  "entries": [
    {
      "id": "[ID EXACT DE L'ENTRÉE]",
      "visible": true,
      "description": "- verbe d'action + quoi + outil + résultat sourcé\\n- puce suivante",
      "titleOverride": "(optionnel) libellé principal à afficher",
      "subtitleOverride": "(optionnel) libellé secondaire : entreprise, école, niveau de langue traduit, émetteur",
      "datesOverride": "(optionnel, à éviter) période à afficher telle quelle"
    }
  ],
  "entryOrder": ["(optionnel) id de l'entrée la plus pertinente", "id suivante"],
  "sectionOrder": ["(optionnel) Compétences", "Expériences Professionnelles"],
  "sectionLabels": { "(optionnel) Compétences": "(libellé dans la langue de l'annonce)" },
  "skillGroups": [{ "category": "(optionnel) libellé de catégorie", "entryIds": ["id_skill_1", "id_skill_2"] }],
  "suggestedEntries": [
    {
      "entryType": "experience|education|skill|certification|language|project|interest|volunteer",
      "title": "(intitulé issu du contexte additionnel)",
      "subtitle": "(optionnel) entreprise / école",
      "startDate": "YYYY-MM (optionnel)",
      "endDate": "YYYY-MM (optionnel)",
      "isCurrent": false,
      "description": "- point clé issu du contexte",
      "reason": "(optionnel) pourquoi c'est pertinent pour l'annonce"
    }
  ],
  "warnings": ["(optionnel) questions de quantification, points à vérifier"]
}"
`;

exports[`snapshots du prompt (junior, confirmé, senior 15 ans) senior 15 ans x annonce FR 1`] = `
"# Rôle
Tu es recruteur senior IT et cybersécurité et expert ATS. Tu optimises un CV pour UNE annonce, sans jamais rien inventer.

## Objectif
Produire UN objet JSON (schéma en fin de prompt) qui sélectionne, ordonne et reformule les éléments du profil maître pour cette annonce. Tu ne crées aucune donnée : tu choisis, tu ordonnes, tu reformules. Les écarts entre le profil et l'annonce sont signalés, jamais comblés.

## Contexte
Pages cibles : 1
Durée d'expérience professionnelle calculée depuis les dates du profil : 15 ans (valeur à utiliser dans l'accroche, sans l'arrondir à la hausse)
Annonce :
<<<
Analyste SOC N2 (H/F). Vous maîtrisez Splunk, Python et la réponse à incident. Anglais courant exigé. CDI Lyon.
>>>

## Profil maître (données sources)
### Trajectoire du profil (source du ton de l'accroche)
- Titre du profil : Analyste SOC
- Résumé du profil : Analyste cybersécurité.

### Expériences
- ID: "s-x1" | Titre: "RSSI" | Entreprise: "Initech" | Dates: "2019-01 - Présent"
  Description :
    - Pilotage d'une équipe de 8 personnes
    - Mise en place d'un SOC externalisé
- ID: "s-x2" | Titre: "Responsable sécurité" | Entreprise: "Globex" | Dates: "2013-02 - 2018-12"
  Description :
    - Certification ISO 27001 du périmètre production
- ID: "s-x3" | Titre: "Ingénieur systèmes" | Entreprise: "Hooli" | Dates: "2010-09 - 2013-01"
  Description : (aucune)

### Compétences
(aucune)

### Formations
- ID: "s-f1" | Diplôme: "Diplôme d'ingénieur" | École: "INSA" | Dates: "2005 - 2010"

### Certifications
- ID: "s-c1" | Titre: "CISSP" | Émetteur: "ISC2"

### Langues
- ID: "s-l1" | Langue: "Français" | Niveau: "Langue maternelle"
- ID: "s-l2" | Langue: "Anglais" | Niveau: "Courant"

### Projets
(aucun)

### Centres d'intérêt
(aucun)

### Bénévolat
(aucun)

## Contexte additionnel (source UNIQUE des entrées suggérées)
(aucun - donc "suggestedEntries" DOIT être un tableau vide)

## Étape 0 - Analyse (remplis "analyse" EN PREMIER dans le JSON)
- langue_annonce : code ISO 639-1 de la langue de l'annonce (fr, en, de...).
- indispensables : 5 à 8 exigences, formulation EXACTE de l'annonce (mots-clés tels qu'écrits).
- importants : 3 à 5 exigences secondaires.
- correspondances : pour chaque indispensable, l'ID de l'entrée du profil qui l'étaye, ou null s'il n'y en a pas.
- ecarts : les indispensables sans preuve dans le profil. À signaler, JAMAIS à combler : ne les reformule pas pour qu'ils paraissent couverts.
Appuie ensuite toutes tes décisions (sélection, ordre, accroche) sur cette analyse.

## Règles
### Langue
- TOUT le contenu produit (title, summary, descriptions, overrides, sectionLabels) est rédigé dans la langue de l'annonce (analyse.langue_annonce).
- Traduis « Présent » (sans datesOverride : l'application s'en charge) et les niveaux de langue (« Courant » devient « Fluent » en anglais). Ne traduis pas les noms propres, employeurs, intitulés de diplômes, certifications, technologies. Un intitulé de poste peut être traduit fidèlement (titleOverride).
- Si l'annonce n'est pas en français, renseigne "sectionLabels" : clés = libellés standard ("Expériences Professionnelles", "Formations", "Compétences", "Certifications", "Langues", "Projets", "Centres d'intérêt", "Bénévolat"), valeurs = libellés dans la langue de l'annonce.

### Structure
- Ne supprime, ne renomme et ne fusionne aucune section. La section « Compétences » garde son libellé (sectionLabels sert uniquement à la traduire). Une section sans entrée visible est masquée automatiquement.
- Liste dans "entries" TOUTES les entrées du profil maître, avec \`visible: true\` si utile pour l'annonce, \`visible: false\` sinon. Une entrée absente de "entries" reste affichée telle quelle.
- Langues : garde visibles uniquement les langues utiles, c'est-à-dire exigées par l'annonce ou, à défaut, les langues autres que celle du CV dont un niveau est renseigné. La langue de l'annonce passe en premier. Ne relève jamais un niveau (pas de « C1 » si la source dit « Courant »).

### Contenu
- TITRE ("title") : l'intitulé de l'annonce seulement s'il est cohérent avec les postes réellement tenus ; sinon « {intitulé réellement tenu} - {mot-clé de l'annonce} ». Jamais un poste que le profil n'a pas occupé.
- ACCROCHE ("summary", 2 lignes maximum) : intitulé + nombre d'années d'expérience (valeur calculée ci-dessus) + domaine ; 2 preuves reliées aux indispensables ; 3 à 4 mots-clés exacts de l'annonce. Profil senior : périmètre, pilotage, résultats. Profil junior : projets, certifications, stack.
- PUCES (champ "description" : une puce par ligne, préfixée par « - », séparées par \\n) : 120 caractères maximum par puce, la plus pertinente en premier. Conserve tous les chiffres de la source, n'en ajoute aucun. Les nombres de puces sont fixés par la règle UNE PAGE ci-dessous.
- MOTS-CLÉS ATS : chaque indispensable étayé apparaît au moins une fois sous sa forme exacte (titre, accroche, compétences ou puces). Si l'annonce emploie un sigle et sa forme longue, écris les deux une fois (« SIEM (Security Information and Event Management) »).
- UNE PAGE (contrainte stricte, prioritaire sur toute autre consigne de volume) :
  - RÉSUMÉ : 2 lignes maximum (environ 200 caractères).
  - EXPÉRIENCES des 5 dernières années ou couvrant un indispensable de l'annonce : 3 puces maximum chacune. Expériences plus anciennes : 1 ligne (titre, employeur, dates : omets "description") ou 1 à 2 puces selon leur utilité pour l'annonce. Une expérience sans lien avec l'annonce : \`visible: false\`.
  - COMPÉTENCES : 3 à 5 catégories visibles et 12 à 15 éléments au total (compte les éléments, pas les entrées : une compétence isolée compte pour 1), les plus pertinents d'abord (entryOrder), les autres \`visible: false\`.
  - FORMATIONS et CERTIFICATIONS : uniquement les plus récentes ou les plus pertinentes, une ligne chacune (aucune description). Les autres \`visible: false\`.
  - CENTRES D'INTÉRÊT et BÉNÉVOLAT : \`visible: false\`, sauf s'ils servent directement l'annonce.
  - Si le tout dépasse encore 1 page, masque d'abord ce qui est le moins lié à l'annonce.
- CATÉGORIES DE COMPÉTENCES (entrées listées avec « Catégorie » et « Éléments ») : la catégorie garde son titre. Tu peux réduire et réordonner ses éléments dans "description" (une puce « - » par élément, le plus pertinent d'abord), en recopiant uniquement des éléments existants de la source, mot pour mot. Aucun ajout, aucune reformulation. "skillGroups" ne concerne que les compétences isolées (listées avec « Titre »), jamais une catégorie.
- ORDRE : le plus pertinent d'abord, entre les sections ("sectionOrder", avec les libellés standard ci-dessus) et à l'intérieur de chaque section ("entryOrder").
- SURCHARGES D'AFFICHAGE (optionnelles) : "titleOverride" (libellé principal), "subtitleOverride" (libellé secondaire : entreprise, école, niveau de langue traduit, émetteur). Uniquement si l'annonce justifie un affichage différent de la source ; elles ne modifient jamais le profil.

### Anti-invention (règle absolue)
- Aucun chiffre, pourcentage, outil, certification, employeur, diplôme, date ou niveau absent des données fournies (profil maître et contexte additionnel). Une compétence de l'annonce absente du profil n'est ni ajoutée ni suggérée : elle va dans analyse.ecarts.
- Si une puce manque de résultat chiffré, ne l'invente pas : ajoute dans "warnings" une question de quantification à mon intention (ex. « Poste X : combien d'utilisateurs ou d'alertes par jour ? »).
- "suggestedEntries" ne peut contenir QUE des éléments directement et explicitement étayés par le contexte additionnel, absents du profil maître, jamais déduits de l'annonce. Contexte additionnel vide ou sans élément pertinent : "suggestedEntries": [].

### Style et rédaction
- Puce = verbe d'action + quoi + outil ou méthode + résultat. Le résultat n'apparaît que s'il figure dans la source. Postes terminés : verbes au passé ; poste actuel : verbes au présent. Pas de pronoms (« j'ai », « nous », « I », « we »).
- Interdits : tâches génériques (« responsable de », « en charge de », « responsible for »), superlatifs (« expert reconnu », « excellent »), jargon creux, adjectifs d'auto-promotion (« passionné », « dynamique », « motivé »), « en effet », « dans le cadre de », « il convient de », « force est de constater », tiret cadratin « — » (utilise « - » ou une virgule).
- Gras (**) autorisé uniquement sur des technologies ou des résultats chiffrés présents dans la source, 2 par puce au maximum. Aucun autre markdown que les puces « - ».
- Homogénéité : même casse pour tous les intitulés, même ponctuation de fin de puce (aucun point final), pas de datesOverride sauf nécessité (le format des dates est géré par l'application).
- Typographie. Français : espace insécable avant « : ; ? ! », guillemets « ». Anglais : virgule d'Oxford systématique, mois abrégés au format « Mon YYYY » si tu dois écrire une date.

## Format de sortie OBLIGATOIRE
### Forme de la réponse
- Réponds UNIQUEMENT avec l'objet JSON du schéma : pas de texte avant ou après, pas de markdown, pas de bloc de code.
- JSON strict : guillemets doubles, aucune virgule finale, aucun commentaire. Les sauts de ligne d'une description s'écrivent \\n.
- Respecte l'ordre des clés du schéma : "analyse" d'abord, puis le reste. Omets un champ optionnel plutôt que de mettre null, "" ou [].
- Recopie les IDs EXACTEMENT comme dans le profil maître. N'invente aucun ID.

Schéma (les valeurs entre parenthèses décrivent le contenu attendu ; les champs marqués "optionnel" s'omettent s'ils ne servent pas) :

{
  "schemaVersion": 2,
  "analyse": {
    "langue_annonce": "(code ISO : fr, en...)",
    "indispensables": ["(exigence, formulation exacte de l'annonce)"],
    "importants": ["(exigence secondaire)"],
    "correspondances": [{ "exigence": "(un indispensable)", "entryId": "(ID de l'entrée qui l'étaye, ou null)" }],
    "ecarts": ["(indispensable sans preuve dans le profil)"]
  },
  "title": "(intitulé réel, avec le mot-clé de l'annonce si cohérent)",
  "summary": "(accroche de 2 à 3 phrases)",
  "entries": [
    {
      "id": "[ID EXACT DE L'ENTRÉE]",
      "visible": true,
      "description": "- verbe d'action + quoi + outil + résultat sourcé\\n- puce suivante",
      "titleOverride": "(optionnel) libellé principal à afficher",
      "subtitleOverride": "(optionnel) libellé secondaire : entreprise, école, niveau de langue traduit, émetteur",
      "datesOverride": "(optionnel, à éviter) période à afficher telle quelle"
    }
  ],
  "entryOrder": ["(optionnel) id de l'entrée la plus pertinente", "id suivante"],
  "sectionOrder": ["(optionnel) Compétences", "Expériences Professionnelles"],
  "sectionLabels": { "(optionnel) Compétences": "(libellé dans la langue de l'annonce)" },
  "skillGroups": [{ "category": "(optionnel) libellé de catégorie", "entryIds": ["id_skill_1", "id_skill_2"] }],
  "suggestedEntries": [
    {
      "entryType": "experience|education|skill|certification|language|project|interest|volunteer",
      "title": "(intitulé issu du contexte additionnel)",
      "subtitle": "(optionnel) entreprise / école",
      "startDate": "YYYY-MM (optionnel)",
      "endDate": "YYYY-MM (optionnel)",
      "isCurrent": false,
      "description": "- point clé issu du contexte",
      "reason": "(optionnel) pourquoi c'est pertinent pour l'annonce"
    }
  ],
  "warnings": ["(optionnel) questions de quantification, points à vérifier"]
}"
`;
